--- a/Intro To Typescript - Starter.ipynb
+++ b/Intro To Typescript - Starter.ipynb
@@ -3259,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 5,
    "id": "c73d5ef8",
    "metadata": {},
    "outputs": [
@@ -3309,16 +3309,6 @@
     "    projectsCompleted: string[],\n",
     "    pet?: string\n",
     "};\n",
-    "\n",
-    "// let student1: CTStudent = {\n",
-    "//     id: 'GMK435&g62L00',\n",
-    "//     name: 'John Smith',\n",
-    "//     age: 24,\n",
-    "//     isTired: true,\n",
-    "//     projectsCompleted:[\"HTML Portfolio\", \"Fakebook\", \"Pokemon API Project\", \"Weather Bug\"],\n",
-    "//     pet: 'dog'\n",
-    "//     game: 'poker'\n",
-    "// };  This was my test to make sure my type was set properly\n",
     "    \n",
     "let student1: CTStudent = {\n",
     "    id: 'GMK435&g62L00',\n",
@@ -3369,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "id": "d0723c22",
    "metadata": {},
    "outputs": [
@@ -3378,7 +3368,7 @@
      "output_type": "stream",
      "text": [
       "red\n",
-      "\u001b[1mnull\u001b[22m\n"
+      "You ate my fruit already\n"
      ]
     }
    ],
@@ -3398,7 +3388,7 @@
     "      if (a != null) {\n",
     "          return a.color\n",
     "      } else {\n",
-    "          return null\n",
+    "          return \"You ate my fruit already\"\n",
     "      };\n",
     "};\n",
     "\n",
@@ -3424,10 +3414,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "id": "a2fe8468",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  isbn: \u001b[32m'17dw7320'\u001b[39m,\n",
+      "  title: \u001b[32m'A book'\u001b[39m,\n",
+      "  author: \u001b[32m'Author McAuthorsen'\u001b[39m,\n",
+      "  fileType: \u001b[32m'.txt'\u001b[39m\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "//Given \n",
     "type Book={\n",
@@ -3443,13 +3446,14 @@
     "//Answer\n",
     "type Ebook = Book & DigitalBook\n",
     "\n",
-    "aBook: Ebook = {\n",
+    "let aBook: Ebook = {\n",
     "    isbn: \"17dw7320\",\n",
     "    title: \"A book\",\n",
     "    author: \"Author McAuthorsen\",\n",
     "    fileType: \".txt\"\n",
     "}\n",
     "\n",
+    "console.log(aBook)\n",
     "\n"
    ]
   },
@@ -3482,7 +3486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "157b9a0d",
    "metadata": {
     "scrolled": false
@@ -3498,6 +3502,22 @@
       "  description: \u001b[32m'me hat'\u001b[39m,\n",
       "  color: \u001b[32m'blue'\u001b[39m,\n",
       "  category: \u001b[32m'Hats'\u001b[39m,\n",
+      "  keywords: [ \u001b[32m'Sports'\u001b[39m, \u001b[32m'Baseball'\u001b[39m, \u001b[32m'Yankees'\u001b[39m ]\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[33m2\u001b[39m,\n",
+      "  price: \u001b[33m20\u001b[39m,\n",
+      "  description: \u001b[32m'me shirt'\u001b[39m,\n",
+      "  color: \u001b[32m'red'\u001b[39m,\n",
+      "  category: \u001b[32m'Shirts'\u001b[39m,\n",
+      "  keywords: [ \u001b[32m'Sports'\u001b[39m, \u001b[32m'Baseball'\u001b[39m, \u001b[32m'Yankees'\u001b[39m ]\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[33m3\u001b[39m,\n",
+      "  price: \u001b[33m70\u001b[39m,\n",
+      "  description: \u001b[32m'me shoes'\u001b[39m,\n",
+      "  color: \u001b[32m'black'\u001b[39m,\n",
+      "  category: \u001b[32m'Shoes'\u001b[39m,\n",
       "  keywords: [ \u001b[32m'Sports'\u001b[39m, \u001b[32m'Baseball'\u001b[39m, \u001b[32m'Yankees'\u001b[39m ]\n",
       "}\n"
      ]
@@ -3515,6 +3535,7 @@
     "    keywords: string[]\n",
     "}\n",
     "\n",
+    "\n",
     "let myHat: ShopItem = {\n",
     "    id: 1,\n",
     "    price: 26,\n",
@@ -3524,7 +3545,27 @@
     "    keywords: [\"Sports\", \"Baseball\", \"Yankees\"]\n",
     "}\n",
     "\n",
-    "console.log(myHat)\n"
+    "let myShirt: ShopItem = {\n",
+    "    id: 2,\n",
+    "    price: 20,\n",
+    "    description: \"me shirt\",\n",
+    "    color: \"red\",\n",
+    "    category: categ.s,\n",
+    "    keywords: [\"Sports\", \"Baseball\", \"Yankees\"]\n",
+    "}\n",
+    "\n",
+    "let myShoes: ShopItem = {\n",
+    "    id: 3,\n",
+    "    price: 70,\n",
+    "    description: \"me shoes\",\n",
+    "    color: \"black\",\n",
+    "    category: categ.sh,\n",
+    "    keywords: [\"Sports\", \"Baseball\", \"Yankees\"]\n",
+    "}\n",
+    "\n",
+    "console.log(myHat)\n",
+    "console.log(myShirt)\n",
+    "console.log(myShoes)\n"
    ]
   }
  ],
